Se han agregado los métodos para borrar los trabajadores y los autobuaes. Finalizado el proyecto. Se harán pruebas para mejorar su funcionamiento.

--- a/src/Principal/VentanaBajas.form
+++ b/src/Principal/VentanaBajas.form
@@ -163,6 +163,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="DAR DE BAJA TRABAJADORES SELECCIONADOS"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="b_bajaTrabajadorActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
